# QPL6200_sdk

./: .gitlab-ci.yml  .gitmodules  Makefile  README.md  RELEASE_NOTES.md  conf.py  index.rst
.devcontainer/: devcontainer.json
.devcontainer/base/: devcontainer-feature.json  install.sh  newuser.zshrc.recommended  update-python-packages.py
.devcontainer/cpp/: devcontainer-feature.json  install.sh
.devcontainer/jlink/: devcontainer-feature.json  install.sh
.devcontainer/recipe/: devcontainer.json
.devcontainer/sdk/: bootstrap.sh  devcontainer-feature.json  install.sh
Applications/Bootloader/: Bootloader_qpg6200_release_postbuild.sh  Makefile.Bootloader_qpg6200  Makefile.Bootloader_qpg6200_release  README.md
Applications/Matter/: README.md
Applications/PTC/: Makefile.PTC_QPG6200_10DBM_UART11to10  Makefile.PTC_QPG6200_10DBM_UART8to9  README.rst
Applications/Zigbee/: README.md
Binaries/Bootloader/: Bootloader_qpg6200.hex  Bootloader_qpg6200_release.hex  README.md
Binaries/Combo/: DoorWindow_Combo_qpg6200_production_no_cd_thread_certified.hex  DoorWindow_Combo_qpg6200_release_thread_certified.hex  DoorWindow_Combo_qpg6200_thread_certified.hex  DoorWindow_Combo_qpg6200_tl_key_production_no_cd_thread_certified.hex  DoorWindow_Combo_qpg6200_tl_key_thread_certified.hex  MotionSensor_Combo_qpg6200_production_no_cd_thread_certified.hex  MotionSensor_Combo_qpg6200_release_thread_certified.hex  MotionSensor_Combo_qpg6200_thread_certified.hex  MotionSensor_Combo_qpg6200_tl_key_production_no_cd_thread_certified.hex  MotionSensor_Combo_qpg6200_tl_key_thread_certified.hex  Switch_Combo_qpg6200_production_no_cd_thread_certified.hex  (+4 more)
Binaries/Matter/: README.md  (+3 more)
Development/: application_structure.rst
Scripts/: README.rst  activate.sh  build_install_spake2p.sh  setup_submodules.sh  zap-version.txt
Tools/: README.md
Tools/RadioControlConsole/rcc-5.5.0/: .cruft.json  .gitlab-ci.yml  .gitlab-ci.yml.rej  .pre-commit-config.yaml  .yamllint.yml  CODEOWNERS  LICENSE  PKG-INFO  README.md  getting_started_for_customers.md  pyproject.toml  pytest.ini
Tools/RadioControlConsole/rcc-5.5.0/docs/: conf.py  index.rst
Tools/RadioControlConsole/rcc-5.5.0/docs/cli_commands/: summary.rst
Tools/RadioControlConsole/rcc-5.5.0/docs/scripting_api/: qorvo.rcc.ctc_versions.v1.rst  qorvo.rcc.ptc_versions.manager.rst  qorvo.rcc.ptc_versions.v1.rst  qorvo.rcc.ptc_versions.v2.rst  qorvo.rcc.rcc.rst  qorvo.rcc.rcc_types.rst  qorvo.rcc.rst  qorvo.rcc.transport.rst
Tools/RadioControlConsole/rcc-5.5.0/hardwaretests/: test_demo.py  test_sanity.py  test_script.txt  test_suite.py  user_config.xml
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/: __init__.py  __main__.py  py.typed  rcc.py
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/cli/: __init__.py  logwatch.py  shell.py
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/ctc_versions/: __init__.py
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/ctc_versions/v1/: __init__.py  ctcdriver.py  gpCTCAPI.py  rccdriver.py
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/ptc_versions/: __init__.py  manager.py
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/ptc_versions/v1/: __init__.py  gpPTCAPI.py  ptcdriver.py  rccdriver.py
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/ptc_versions/v2/: __init__.py  gpPTCAPI.py  ptcdriver.py  rccdriver.py
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/ptc_versions/v3/: __init__.py  gpPTCAPI.py  ptcdriver.py  rccdriver.py
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/rcc_types/: __init__.py  connection.py  console_command.py  deviceinfo.py  generic.py  property_attribute.py  rcc_exceptions.py
Tools/RadioControlConsole/rcc-5.5.0/qorvo/rcc/transport/: gpAPI_2.py  jadelogger.py  peakconnect.py  threading.py
Tools/RadioControlConsole/rcc-5.5.0/test/: test_public.py
extensions/: regex_links.py
make/: gpcommon.mk
sphinx/: requirements.txt
(+865 files in other folders)
